# spatial_filtering

./: README.md  __init__.py  convolution.py  pyproject.toml
spatial_filtering/: __init__.py  filters.py
