[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "p4score"
dynamic = ["version"]
dependencies = [
  "numpy>=2.2.3",
]
requires-python = ">=3.11"
authors = [
  {name = "Thomas Vidori", email = "thomas.vidori@protonmail.com"},
]
readme = "README.md"
