[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "spatial_filtering"
dynamic = ["version"]
dependencies = [
  "numpy>=2.2.3",
]
requires-python = ">=3.11"
authors = [
  {name = "Carlos Lopez", email = "carlos_hdz.98@hotmail.com"},
]
readme = "README.md"
